--- a/login.html
+++ b/login.html
@@ -19,5 +19,21 @@ try{
   }
 }catch(e){}
 </script>
+<script>
+async function doLogin(e){
+  e.preventDefault();
+  const email = document.querySelector('#email').value;
+  const password = document.querySelector('#password').value;
+  const res = await fetch('/api/login', {
+    method:'POST',
+    headers:{'Content-Type':'application/json'},
+    body: JSON.stringify({ email, password })
+  });
+  if(res.ok){ location.href = '/dashboard.html'; }
+  else{ alert('Invalid credentials'); }
+}
+document.querySelector('#login-form').addEventListener('submit', doLogin);
+</script>
 </body></html>
+
 
