--- a/login.html
+++ b/login.html
@@ -4,11 +4,15 @@
 <style>body{font-family:Arial,sans-serif;background:#f6f8fb;margin:0}main{max-width:560px;margin:12vh auto;padding:28px;background:#fff;border-radius:14px;box-shadow:0 6px 18px rgba(0,0,0,.08)}h1{color:#0b3366}p{color:#555;text-align:center}</style>
 </head><body>
 <main>
-  <h1>BankMaps Login (Test)</h1>
-  <p>If you completed payment, this is the page we’ll redirect to.</p>
-  <p>(Later: replace with your real auth form and post-payment provisioning status.)</p>
+  <h1>BankMaps Login</h1>
+  <form id="login-form">
+    <label>Email<br><input id="email" type="email" required></label><br><br>
+    <label>Password<br><input id="password" type="password" required></label><br><br>
+    <button type="submit">Login</button>
+  </form>
   <p><a href="/index.html">Home</a> • <a href="/payment.html">Pricing</a></p>
 </main>
+
 <script>
 try{
   const x = JSON.parse(localStorage.getItem('signup_lender')||'{}');
@@ -35,5 +39,6 @@ async function doLogin(e){
 document.querySelector('#login-form').addEventListener('submit', doLogin);
 </script>
 </body></html>
+
 
 
