--- a/login.html
+++ b/login.html
@@ -1,44 +1,23 @@
-<!DOCTYPE html>
-<html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>BankMaps Login (Test)</title>
-<style>body{font-family:Arial,sans-serif;background:#f6f8fb;margin:0}main{max-width:560px;margin:12vh auto;padding:28px;background:#fff;border-radius:14px;box-shadow:0 6px 18px rgba(0,0,0,.08)}h1{color:#0b3366}p{color:#555;text-align:center}</style>
-</head><body>
 <main>
   <h1>BankMaps Login</h1>
   <form id="login-form">
-    <label>Email<br><input id="email" type="email" required></label><br><br>
+    <label>Username<br><input id="username" type="text" required></label><br><br>
     <label>Password<br><input id="password" type="password" required></label><br><br>
     <button type="submit">Login</button>
   </form>
-  <p><a href="/index.html">Home</a> • <a href="/payment.html">Pricing</a></p>
 </main>
-
-<script>
-try{
-  const x = JSON.parse(localStorage.getItem('signup_lender')||'{}');
-  if(x && x.lendername){
-    const p = document.createElement('p');
-    p.textContent = `Signup selection: ${x.lendername} (percentile ${Number(x.percentile||0).toFixed(2)})`;
-    document.body.appendChild(p);
-  }
-}catch(e){}
-</script>
 <script>
 async function doLogin(e){
   e.preventDefault();
-  const email = document.querySelector('#email').value;
+  const username = document.querySelector('#username').value;
   const password = document.querySelector('#password').value;
   const res = await fetch('/api/login', {
     method:'POST',
     headers:{'Content-Type':'application/json'},
-    body: JSON.stringify({ email, password })
+    body: JSON.stringify({ username, password })
   });
   if(res.ok){ location.href = '/dashboard.html'; }
   else{ alert('Invalid credentials'); }
 }
 document.querySelector('#login-form').addEventListener('submit', doLogin);
 </script>
-</body></html>
-
-
-
