--- a/login.html
+++ b/login.html
@@ -1,26 +1,51 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>BankMaps Login</title>
+  <style>
+    body{font-family:Arial,sans-serif;background:#f6f8fb;margin:0}
+    main{max-width:560px;margin:12vh auto;padding:28px;background:#fff;
+         border-radius:14px;box-shadow:0 6px 18px rgba(0,0,0,.08)}
+    h1{color:#0b3366}
+    label{display:block;margin-bottom:10px}
+    input{width:100%;padding:8px;border:1px solid #ccc;border-radius:4px}
+    button{margin-top:12px;padding:8px 16px;border:none;border-radius:4px;
+           background:#0b3366;color:#fff;cursor:pointer}
+    button:hover{background:#0d3d80}
+  </style>
+</head>
+<body>
 <main>
   <h1>BankMaps Login</h1>
   <form id="login-form">
-    <label>Username<br><input id="username" type="text" required></label><br><br>
-    <label>Password<br><input id="password" type="password" required></label><br><br>
+    <label>Username<br><input id="username" type="text" required></label>
+    <label>Password<br><input id="password" type="password" required></label>
     <button type="submit">Login</button>
   </form>
 </main>
+
 <script>
 async function doLogin(e){
   e.preventDefault();
   const username = document.querySelector('#username').value;
   const password = document.querySelector('#password').value;
+
   const res = await fetch('/api/login', {
     method:'POST',
     headers:{'Content-Type':'application/json'},
     body: JSON.stringify({ username, password })
   });
-  if(res.ok){ location.href = '/dashboard.html'; }
-  else {
-  const err = await res.json().catch(()=>({}));
-  alert('Invalid credentials\n' + JSON.stringify(err));
+
+  if(res.ok){
+    location.href = '/dashboard.html';
+  } else {
+    const txt = await res.text();
+    alert('Invalid credentials\n' + txt);
+  }
 }
 document.querySelector('#login-form').addEventListener('submit', doLogin);
 </script>
-
+</body>
+</html>
