--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -36,6 +36,7 @@
     <section class="grid" id="actions">
       <!-- Current buttons -->
       <a class="btn" href="/report.html">📊 View Report</a>
+      <a class="btn" href="/map.html">🗺️ Map</a>
       <a class="btn" href="#" onclick="logout();return false;">🚪 Logout</a>
 
       <!-- Future buttons (examples) -->
