--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -36,11 +36,11 @@
     <section class="grid" id="actions">
       <!-- Current buttons -->
       <a class="btn" href="/report.html">📊 View Report</a>
-      <a class="btn" href="/map.html">🗺️ Map</a>
+      <a class="btn" href="/maps.html">🗺️ Map</a>
       <a class="btn" href="#" onclick="logout();return false;">🚪 Logout</a>
 
       <!-- Future buttons (examples) -->
-      <!-- <a class="btn" href="/map.html">🗺️ Map View</a> -->
+      <!-- <a class="btn" href="/maps.html">🗺️ Map View</a> -->
       <!-- <a class="btn" href="/peers.html">🤝 Peer Comparison</a> -->
       <!-- <a class="btn" href="/performance.html">📈 Performance Report</a> -->
     </section>
